# joker

./: .clang-format  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  main.cpp  todo.txt
3rd/: CMakeLists.txt
3rd/VectorMath/: CMakeLists.txt
code/joker/core/: CMakeLists.txt  CoreType.h  JokerAlgorithm.cpp  JokerAlgorithm.h  JokerAlgraihm.h  JokerCore.h  JokerCorePCH.cpp  JokerCorePCH.h  JokerHashMap.h  JokerString.h  JokerVector.h  UtilsEnum.h  test.cpp
code/joker/engine/: CMakeLists.txt  JokerEnginePCH.cpp
code/joker/rhi/: CMakeLists.txt  JokerDevice.cpp  JokerDevice.h  JokerRHI.cpp  JokerRHI.h  JokerRHIEnum.h  JokerRHIPCH.cpp  JokerRHIPCH.h  JokerRHIRenderer.cpp  JokerRHIRenderer.h  JokerRHIResource.h  JokerRHIType.h  JokerRenderer.cpp  JokerRenderer.h  JokerRendererType.h  JokerSwapChain.cpp  JokerSwapChain.h  RHI.h  RHIEnum.h  RHIFunction.cpp  RHIFunction.h  RHIRendererContext.h  RHIStruct.h  RHIType.h  RHIVertexBuffer.h  RendererConfig.h  RendererEnums.h  RendererInit.cpp  RendererInit.h  RendererTypes.h
code/joker/rhi/null/: RHIStructNull.h
code/joker/rhi/vulkan/: JokerCommandVulkan.cpp  JokerCommandVulkan.h  JokerDeviceVulkan.cpp  JokerDeviceVulkan.h  JokerFrameBufferVulkan.cpp  JokerFrameBufferVulkan.h  JokerPipelineVulkan.cpp  JokerPipelineVulkan.h  JokerQueueVulkan.cpp  JokerQueueVulkan.h  JokerRHIRendererVulkan.cpp  JokerRHIRendererVulkan.h  JokerRHIVulkan.h  JokerRenderPassVulkan.cpp  JokerRenderPassVulkan.h  JokerRendererVulkan.cpp  JokerRendererVulkan.h  JokerSwapChainVulkan.cpp  JokerSwapChainVulkan.h  JokerVulkan.h  RHIFunctionVulkan.cpp  RHIStructVulkan.h  RendererInitVulkan.cpp  RendererPrivateVulkan.h  RendererTypesVulkan.h  RendererVulkan.cpp  RendererVulkan.h
code/test/test1/: CMakeLists.txt  main.cpp  vk_engine.cpp  vk_engine.h
code/test/test1/testfolder/: hoho.cpp  test.cpp  test.h
crates/joker_app/: Cargo.toml
crates/joker_ecs/: Cargo.toml
crates/joker_ecs/src/: archetype.rs  bundle.rs  change_detection.rs  component.rs  event.rs  lib.rs  removal_detection.rs  resource.rs
crates/joker_ecs/src/entity/: map_entities.rs  mod.rs
crates/joker_ecs/src/query/: access.rs  mod.rs
crates/joker_ecs/src/storage/: blob_vec.rs  mod.rs  resource.rs  sparse_set.rs  table.rs
crates/joker_ecs/src/system/: function_system.rs  mod.rs  system_param.rs
crates/joker_ecs/src/world/: entity_ref.rs  identifier.rs  mod.rs
crates/joker_foundation/: Cargo.toml
crates/joker_foundation/macros/: Cargo.toml
crates/joker_foundation/macros/src/: lib.rs
crates/joker_foundation/src/: lib.rs
crates/joker_internal/: Cargo.toml
crates/joker_ptr/: Cargo.toml
crates/joker_ptr/src/: lib.rs
crates/joker_rhi/: Cargo.toml
crates/joker_rhi/src/: lib.rs  macros.rs  null.rs
crates/joker_rhi/src/vulkan/: mod.rs
examples/: hello_world.rs
sdk/Vulkan/: CMakeLists.cmake
sdk/sdl2/: CMakeLists.cmake
src/: lib.rs
tools/cmake/: Build.cmake  CommonFunctions.cmake  CommonMacros.cmake  CommonVar.cmake  Configure.cmake  ConfigureBuildOptions.cmake  ConfigureBuildType.cmake  ConfigurePath.cmake  InitialSetup.cmake
tools/cmake/compiler/: Compiler-MSVC.cmake
