[package]
name = "joker_ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
joker_ptr = { path="../joker_ptr" }
joker_foundation = { path="../joker_foundation" }
serde = { version = "1", features = ["derive"] }
fixedbitset = "0.4.2"
