[package]
name = "joker_foundation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
joker_foundation_proc_macros = { path = "macros"}

ahash = "0.8.3"
hashbrown = { version = "0.14", features = ["serde","ahash"] }
