joker_project_app(xixi)
target_link_libraries(xixi PUBLIC JokerEngine)

# macro(source_group_by_dir source_files)
#     if(MSVC)
#         set(sgbd_cur_dir ${CMAKE_CURRENT_SOURCE_DIR})
#         foreach(sgbd_file ${${source_files}})
#             string(REGEX REPLACE ${sgbd_cur_dir}/\(.*\) \\1 sgbd_fpath ${sgbd_file})
#             string(REGEX REPLACE "\(.*\)/.*" \\1 sgbd_group_name ${sgbd_fpath})
#             string(COMPARE EQUAL ${sgbd_fpath} ${sgbd_group_name} sgbd_nogroup)
#             string(REPLACE "/" "\\" sgbd_group_name ${sgbd_group_name})
#             if(sgbd_nogroup)
#                 set(sgbd_group_name "\\")
#             endif(sgbd_nogroup)
#             message(STATUS "------------------${sgbd_group_name} ${sgbd_file}")
#             source_group(${sgbd_group_name} FILES ${sgbd_file})
#         endforeach(sgbd_file)
#     endif(MSVC)
# endmacro(source_group_by_dir)

# file(GLOB_RECURSE project_headers *.h)
# file(GLOB_RECURSE project_cpps *.cpp)
# set(all_files ${project_headers} ${project_cpps})
# source_group_by_dir(all_files)
# message(STATUS ${all_files})

# set(all_files "E:/Work/joker/code/test/test1/main.cpp" "testfolder/hoho.cpp" "testfolder/test.cpp")
# # E:/Work/joker/code/test/test1/main.cpp
# source_group("\\" FILES "E:/Work/joker/code/test/test1/main.cpp")
# source_group("bobo" FILES "testfolder/hoho.cpp" "testfolder/test.cpp")

# add_executable(xixi ${all_files})
# target_link_libraries(xixi PUBLIC EASTL)